--- a/views/partials/milkshake-gulped-block.handlebars
+++ b/views/partials/milkshake-gulped-block.handlebars
@@ -1,3 +1,4 @@
+{{!-- Layout for the milkshakes that have been gulped --}}
 <div class="row align-items-center">
   <div class="col" id="shake-name">
     <p class="gulped-name">{{milkshake_name}}</p>
