added form validation modal

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -52,4 +52,18 @@
       </div>
     </div>
   </div>
+
+  <div class="modal fade" id="errorModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-body text-center">
+          Please enter a valid shake name.
+          <center>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          </center>
+        </div>
+          
+      </div>
+    </div>
+  </div>
 </div>
