--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,7 +12,7 @@
   <div class="row">
     <div class="col-md-6">
       <div class="card text-white bg-warning mb-3">
-        <h4 class="card-header text-center">On Order</h4>
+        <h4 class="card-header text-center font-weight-bold">On Order</h4>
         <div class="card-body">
           {{!-- Loops through the list of milkshakes and filters the ones that haven't been gulped --}}
           {{#each milkshakes}} 
@@ -27,7 +27,7 @@
     <div class="col-md-6">
       <div class="card text-white bg-warning mb-3">
         
-          <h4 class="card-header text-center">Completed Orders</h4>
+          <h4 class="card-header text-center font-weight-bold">Completed Orders</h4>
         
         <div class="card-body">
            {{!-- Loops through the list of milkshakes and filters the ones that have been gulped --}}
@@ -47,7 +47,7 @@
     <div class="col-12 col-md-8 col-lg-6 mx-auto p-4">
       <div class="form-group text-center">
         <input type="text" class="form-control" id="name">
-        <button id="add-milkshake">Submit</button>
+        <button id="add-milkshake">Submit Order</button>
         <label for="name">Enter a Milkshake you'd like to order and hit 'Submit Order'!</label>
       </div>
     </div>
